<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">keep_in_good_health</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="food_name">菠萝</string>
    <string name="food_explain">菠萝具有清热解渴、消食止泻、抗炎消肿等功能</string>
    <string name="food_name_one">凤梨山楂汤</string>
    <string name="food_name_two">花样菠萝菜</string>
    <string name="food_name_three">凤梨排骨船</string>
    <string name="home_page_search">请输入搜索的内容</string>
    <string name="home_page_oneday_title">一日三餐</string>
    <string name="home_page_oneday_content">如果你无法简洁的表达你的想法，那只说明你还不了解它。</string>
    <string name="home_page_carefully">今日推荐一日三餐</string>
    <string name="meticulous_care_is_recommended">颐养精心推荐</string>
    <string name="home_page_carefully_title">推荐</string>
    <string name="home_page_carefully_content">如果你无法简洁的表达你的想法，那只能说明你还不够了解它。</string>
    <string name="home_page_carefully_signature">--阿尔波特·爱因斯坦</string>
    <string name="food_name_recom">为您推荐</string>
    <string name="food_name_checkall">查看全部</string>
    <string name="food_name_text">如果你无法简洁的表达你的想法，那只说明你还不够了解它。 \n -- 阿尔伯特·爱因斯坦</string>
    <string name="food_name_details">如何挑选</string>
    <string name="food_name_select">好的菠萝摸上去坚挺有弹性。如果手感松软、按上去有凹陷的感觉、那么就可能成熟果高，容易变质。</string>
    <string name="food_name_selects">成熟的菠萝表皮微亮黄色，两端有些发绿，顶部的发冠微青褐色。</string>
    <string name="food_name_taboo">食材禁忌</string>
    <string name="food_name_taboo_dit">\t患有溃疡病、肾脏病、凝血功能障碍等疾病的人最好不要吃菠萝。</string>
    <string name="home_page_text">首页</string>
    <string name="soup">煲汤</string>
    <string name="three_meals_a_day_content">早饭要吃好，午饭要吃饱，晚饭要吃少，细中有粗、荤素搭配，营养均匀。</string>
    <string name="home_page_recommended">推荐</string>
    <string name="home_page_dietary">膳食</string>
    <string name="function_contxt1">对于大多数人来说，提起大枣这种食物， ，相的，信很多人首先会想到的就是其所具有的养颜补血的功效，在生活中，许多女性也是经常选这吃大枣来进行补血 因此，对于大枣的功效与作用，显然应当被大家所认知。 </string>
    <string name="function_context2">1.抗郭明 大枣乙醇提起物对特意反应性疾病，能抑制抗体的产生，对小老鼠fjadslkfjkasldfjasfjslfkj</string>
    <string name="jjzz">如果你无法简洁的表达你的想法，那只说明你还不够了解它，\n阿尔伯特jbst</string>
    <string name="todayeat_eattitle">今日推荐</string>
    <string name="todayeat_breakfast">营养早餐</string>
    <string name="todayeat_lunch">丰富午餐</string>
    <string name="todayeat_dinner">可口晚餐</string>
    <string name="lucky_fruit">幸运水果</string>
    <string name="todayeat_breakfastcontext">如果你无法简洁的表达你的想法，那只能说明你还不够了解它。</string>
    <string name="todayeat_lunchcontext">如果你无法简洁的表达你的想法，那只能说明你还不够了解它。</string>
    <string name="todayeat_dinnercontext">如果你无法简洁的表达你的想法，那只能说明你还不够了解它。</string>
    <string name="Inquiry_doctor_edit_doctor">医生/病状科室</string>
    <string name="Inquiry_doctor_doctor_inform">本周六 李明医生教授团队在线坐诊...</string>
    <string name="Inquiry_doctor_Pediatrics_doctor">儿科</string>
    <string name="Inquiry_doctor_text_doctor">文字</string>
    <string name="Inquiry_doctor_dots">...</string>
    <string name="personal_center_title">个人中心</string>
    <string name="person_my_record">我的记录</string>
    <string name="person_my_friend">我的好友</string>
    <string name="person_my_collect">我的收藏</string>
    <string name="person_my_share">我的分享</string>
    <string name="person_shopping_cart">购物车</string>
    <string name="person_vip">个人信息</string>
    <string name="person_not_login">点击登录</string>
    <string name="personal_login_name">娇羞，姿态美</string>
    <string name="Inquiry_doctor_order_doctor">预约医师</string>
    <string name="Inquiry_doctor_all_doctor">全部</string>
    <string name="Inquiry_doctor_doctor_name">名字</string>
    <string name="shop_collection_title_name">店铺收藏</string>
    <string name="shop_collection_all_shop">全部商品</string>
    <string name="shop_collection_new_shop">新品上线</string>
    <string name="shop_collection_my_orderform">我的订单</string>
    <string name="shop_collection_shopname">产品名</string>
    <string name="shop_collection_shop_money">35</string>
    <string name="my_records_title">我的记录</string>
    <string name="my_records_pay_money">待付款</string>
    <string name="my_records_send_shop">待发货</string>
    <string name="my_records_take_delivered">待收货</string>
    <string name="my_records_evaluates">待评价</string>
    <string name="my_records_all">全部</string>
    <string name="my_records_list_name">欧姆龙专卖店</string>
    <string name="my_records_list_goods">店家已发货</string>
    <string name="my_records_list_thingsmoney">TH457A ￥55.00</string>
    <string name="my_records_list_shop_number">共一件商品 实付：</string>
    <string name="my_records_list_shop_money">￥50.00</string>
    <string name="my_records_change_receive">确认收货</string>
    <string name="my_records_list_text">OMRON欧姆龙红外耳机式体温计</string>
    <string name="home_page_btn">首页</string>
    <string name="classification_btn">分类</string>
    <string name="my_btn">我的</string>
    <string name="eattitle">今天吃什么</string>
    <string name="breakfast">营养早餐</string>
    <string name="lunch">丰富午餐</string>
    <string name="dinner">可口晚餐</string>
    <string name="breakfastcontext">死定了风景卅fgdsfg份认购</string>
    <string name="lunchcontext">死定了风景卅按时发广东省多</string>
    <string name="dinnercontext">死定了风景卅儿童如果对方和</string>
    <string name="relate">某某相关食谱</string>
    <string name="login">登录</string>
    <string name="register_finsh">完成</string>
    <string name="moeny">43.00</string>
    <string name="login_other">第三方登录</string>
    <string name="register">注册</string>
    <string name="phone">昵称/手机号/邮箱</string>
    <string name="register_phone">+86 请输入手机号码</string>
    <string name="password">密码</string>
    <string name="rember_passwrod">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="forget">忘记密码</string>
    <string name="register_code">请输入手机验证码</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_reed">我已阅读并同意</string>
    <string name="register_agreement">用户协议</string>
    <string name="register_next">登录</string>
    <string name="register_password">请输入您的密码</string>
    <string name="register_inpassword">请再次输入您的密码</string>
    <string name="register_OK">完成</string>
    <string name="in_the_picture_at_the_top_of_the_back_button">位于图片左上方有返回按钮</string>
    <string name="reasons_for_the_formation">形成原因</string>
    <string name="rapid_interrogation">快速问诊</string>
    <string name="life_advice">生活建议</string>
    <string name="you_may_need_to">可能需要</string>
    <string name="reasons_for_the_formation_activity_content_title">1、感染</string>
    <string name="alerts">消息通知</string>
    <string name="set_up_the_text">设置</string>
    <string name="personal_information_title">个人信息</string>
    <string name="fruit">水果</string>
    <string name="the_editor">编辑</string>
    <string name="head_portrait">头像</string>
    <string name="username">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="the_constellation">星座</string>
    <string name="shop_details">商品详情</string>
    <string name="shop_title">诗酒田园 微甜 冬酿桂花酒</string>
    <string name="details_little">无添加桂花酒，微微醺，醇香动人。香！ 香！ 香！</string>
    <string name="shop_bigtitle">为什么选择我们</string>
    <string name="shop_bigtitle_neir">我们采用传统酒酿工艺，经过发酵酿造、过滤、澄清等非常特别的工艺（绝不用一般工业厂所采用的勾兑、加澄清剂的方式）</string>
    <string name="shop_bigtitle_neirtwo">经过长达6个月以上的酿制，才能酿出上好的桂花酒。他的酒精度数在8度左右，有非常浓郁的桂花香，很好喝。</string>
    <string name="details_goodeit">最佳饮用方法</string>
    <string name="details_goodeit_frist">冷藏，饮前醒酒10分钟，可以直接饮用。</string>
    <string name="details_goodeit_second">冬季可短时间温酒饮用，夏季可杯中加少许冰块。</string>
    <string name="details_explain">特别说明</string>
    <string name="details_explain_frist">桂花酒，收到后记得要冷藏。</string>
    <string name="details_explain_second">果酒经过发酵，加上快递运输过程中的晃动，通常都会有一些气，请朋友们收到包裹后检查一下，万一出现漏的情况，请立即联系我们，我们会安排给补寄的，祝大家饮酒愉快！</string>
    <string name="professional">职业</string>
    <string name="the_company">公司</string>
    <string name="home">所在地</string>
    <string name="email">邮箱</string>
    <string name="personal_elucidation">个人说明</string>
    <string name="interests_and_hobbies">兴趣爱好展示设置</string>
    <string name="username_text">长命百岁</string>
    <string name="log_in_the_phone">登录手机</string>
    <string name="the_login_password">登录密码</string>
    <string name="binding_weChat_ID">绑定微信号</string>
    <string name="Binding_QQ_number">绑定QQ号</string>
    <string name="The_binding_of_sina_weibo">绑定新浪微博</string>
    <string name="Binding_alipay">绑定支付宝</string>
    <string name="Is_binding">已绑定</string>
    <string name="unbounded">未绑定</string>
    <string name="modify_the">修改</string>
    <string name="the_constellation_text">狮子座</string>
    <string name="professional_text">自己的职业</string>
    <string name="the_company_text">填写公司</string>
    <string name="home_text">重庆</string>
    <string name="email_text">12345678@qq.com</string>
    <string name="personal_elucidation_text">介绍以下自己吧</string>
    <string name="my_collection_title">我的收藏</string>
    <string name="my_collection_content_title">标题</string>
    <string name="my_collection_content">如果你无法简洁的表达你的想法，那只说明你还不够了解它</string>
    <string name="the_shopping_cart_title">购物车</string>
    <string name="Future_generations">全选</string>
    <string name="A_combined">合计（含运费）:</string>
    <string name="settlement">去结算</string>
    <string name="product_name">产品名</string>
    <string name="product_name_title">产品名字</string>
    <string name="product_name_price">价格</string>
    <string name="product_name_btn">立即购买</string>
    <string name="the_shopping_title">普洱茶 陈皮普洱三颗装</string>
    <string name="the_shopping_content">小茶婆婆出品</string>
    <string name="the_shopping_number">数量: 1包</string>
    <string name="forger_phone">请输入手机号码</string>
    <string name="forger_code">请输入验证码</string>
    <string name="forger_newpassword">请输入新密码</string>
    <string name="forger_newinpassword">请确认新密码</string>
    <string name="forget_finish">确认</string>
    <string name="one">综合</string>
    <string name="two">品牌</string>
    <string name="three">价格</string>
    <string name="four">适宜人群</string>
    <string name="fuhao">￥</string>
    <string name="kuo">[</string>
    <string name="kuoh">]</string>
    <string name="nice">好评率</string>
    <string name="buy">购买</string>
    <string name="numb">1</string>
    <string name="numbs">2</string>
    <string name="details_big_title">汤臣倍健R蛋白粉450g/罐(附量具)</string>
    <string name="details_big_nei">下单立减1元，买赠共750g蛋白粉+液体钙</string>
    <string name="details_big_get">30粒增强免疫力 送小蛋粉 150g</string>
    <string name="details_big_menoy">￥ 26.00</string>
    <string name="details_big_nice">好评率89%</string>
    <string name="details_big_image">详细参数</string>
    <string name="name">张顺</string>

</resources>