<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/my_records_list_shopname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/my_records_list_name" />

        <TextView
            android:id="@+id/my_records_list_goodsstates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/my_records_list_goods" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/intent_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:padding="10dp">

        <ImageView
            android:id="@+id/my_records_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@drawable/ic_launcher"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/my_records_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/my_records_list_text" />

            <TextView
                android:id="@+id/my_records_shop_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/my_records_list_thingsmoney" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/my_records_shop_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_records_list_shop_number" />

                <TextView
                    android:id="@+id/my_records_shop_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_records_list_shop_money" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/my_records_change_receiving"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/selector_change"
            android:text="@string/my_records_change_receive"
            android:textSize="12sp" 
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>