<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/ic_launcher"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_records_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@drawable/ic_launcher"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@drawable/ic_launcher"
        android:src="@drawable/ic_launcher"
        android:layout_weight="2"/>
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/my_records_pay_money"
            android:padding="10dp"
            android:textSize="14sp" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/my_records_send_shop"
            android:padding="10dp"
            android:textSize="14sp" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/my_records_delivered"
            android:padding="10dp"
            android:textSize="14sp" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/my_records_finish"
            android:padding="10dp"
            android:textSize="14sp" />
    </RadioGroup>
    
    <ListView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/my_records_listview"
        android:layout_weight="2"/>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" 
        android:layout_weight="1">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/switch_bg"
            android:gravity="center"
            android:text="@string/home_page_btn" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/switch_bg"
            android:gravity="center"
            android:text="@string/classification_btn" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/switch_bg"
            android:gravity="center"
            android:text="@string/my_btn" />
    </LinearLayout>
    

</LinearLayout>
